--- a/community/index.html
+++ b/community/index.html
@@ -99,6 +99,9 @@
               <a href="/community/francesca_frattaroli/index.html"><img src="/images/people/francesca_frattaroli.png" alt="Francesca Frattaroli" />Francesca Frattaroli</a>
             </div>
             <div class="card">
+              <a href="/community/zack_marlow/index.html"><img src="/images/people/zack_marlow.png" alt="Zack Marlow" />Zack Marlow</a>
+            </div>
+            <div class="card">
               <a href="/community/catherine_ross/index.html"><img src="/images/people/catherine_ross.jpg" alt="Catherine Ross" />Catherine Ross</a>
             </div>
             <div class="card">
@@ -190,8 +193,8 @@
       function gtag() {
         dataLayer.push(arguments)
       }
-      gtag("js", new Date())
-      gtag("config", "G-CSLJ4LHBM2")
+      gtag('js', new Date())
+      gtag('config', 'G-CSLJ4LHBM2')
     </script>
   </body>
 </html>
