added skip and scott g

--- a/community/index.html
+++ b/community/index.html
@@ -87,11 +87,15 @@
               <a href="/community/hilary_tsai/index.html"><img src="/images/people/hilary_tsai.jpg" alt="Hilart Tsai" />Hilart Tsai</a>
             </div>
             <div class="card">
+              <a href="/community/scott_garner/index.html"><img src="/images/people/scott_garner.png" alt="Scott Garner" />Scott Garner</a>
+            </div>
+            <div class="card">
               <a href="/community/laura_camila_medina/index.html"><img src="/images/people/laura_camila_medina.jpg" alt="Laura Camila Medina" />Laura Camila Medina</a>
             </div>
             <div class="card">
               <a href="/community/helen_leigh/index.html"><img src="/images/people/helen_leigh.png" alt="Helen Leigh" />Helen Leigh</a>
             </div>
+            <div class="card"><img src="/images/people/skip_newberry.png" alt="Skip Newberry" />Skip Newberry</div>
             <div class="card">
               <a href="/community/justin_patrizi/index.html"><img src="/images/people/justin_patrizi.png" alt="Justin Patrizi" />Justin Patrizi</a>
             </div>
@@ -106,6 +110,9 @@
             </div>
             <div class="card">
               <a href="/community/scott_nieradka/index.html"><img src="/images/people/scott_nieradka.jpg" alt="Scott Nieradka" />Scott Nieradka</a>
+            </div>
+            <div class="card">
+              <a href="/community/steven_christian/index.html"><img src="/images/people/steven_christian.png" alt="Steven Christian" />Steven Christian</a>
             </div>
             <div class="card">
               <a href="/community/lis_charman/index.html"><img src="/images/people/lis_charman.jpg" alt="Lis Charman" />Lis Charman</a>
