--- a/community/index.html
+++ b/community/index.html
@@ -41,6 +41,9 @@
               <a href="/community/shankar_narayan/index.html"><img src="/images/people/shankar_narayan.png" alt="Shankar Narayan" />Shankar Narayan</a>
             </div>
             <div class="card">
+              <a href="/community/rebecca_gibbons/index.html"><img src="/images/people/rebecca_gibbons.png" alt="Rebecca Gibbons" />Rebecca Gibbons</a>
+            </div>
+            <div class="card">
               <a href="/community/vinay_narayan/index.html"><img src="/images/people/person-generic-white.png" alt="Vinay Narayan" />Vinay Narayan</a>
             </div>
             <div class="card">
@@ -102,6 +105,7 @@
             <div class="card">
               <a href="/community/francesca_frattaroli/index.html"><img src="/images/people/francesca_frattaroli.png" alt="Francesca Frattaroli" />Francesca Frattaroli</a>
             </div>
+
             <div class="card">
               <a href="/community/zack_marlow/index.html"><img src="/images/people/zack_marlow.png" alt="Zack Marlow" />Zack Marlow</a>
             </div>
