--- a/community/index.html
+++ b/community/index.html
@@ -157,6 +157,9 @@
               <a href="/community/jesse_england/index.html"><img src="/images/people/jesse_england.jpeg" alt="Jesse England" />Jesse England</a>
             </div>
             <div class="card">
+              <a href="/community/vo_vo/index.html"><img src="/images/people/vo_vo.png" alt="Vo" />Vo</a>
+            </div>
+            <div class="card">
               <a href="/community/matthew_sottile/index.html"><img src="/images/people/matthew_sottile.jpg" alt="Matthew Sottile" />Matthew Sottile</a>
             </div>
             <div class="card">
