--- a/techlab/index.html
+++ b/techlab/index.html
@@ -40,11 +40,23 @@
 
           <p>CETI workshops, trainings, and institutes offer opportunities for lifelong learning, professional development, skill-building, and career transformation. Our approach is participatory, inclusive, joyful, critical, and intersectional. We enthusiastically welcome a diverse motivated community, who are excited about relevant, impactful learning experiences in emerging technologies, and who are collaborative and generous in the engagement - willing to learn with and from, and willing to share experiences, expertise, and imagination.</p>
           <p>More details at: eventbrite page and on the CETI calendar.</p>
-          <p><a href="https://www.eventbrite.com/o/ceti-28009365641" target="_blank" class="button">CETI on EventBrite</a> &nbsp; <a href="https://calendar.google.com/calendar/embed?src=hello%40ceti.institute&ctz=America%2FLos_Angeles" target="_blank" class="button">CETI Calendar</a></p>
+          <p><a href="https://www.eventbrite.com/o/ceti-28009365641" target="_blank" class="button">CETI on EventBrite</a> &nbsp; <a href="#calendar" target="_blank" class="button">CETI Calendar</a></p>
           <p>We foster collaborative experimentation, real-time problem-solving, and intentional innovation through these workshops. Our workshops will be held in the CETI lab or in partner spaces and often streamed online. Please reach out to <a href="mailto:hello@ceti.institute?subject=CETI Lab">hello@ceti.institute</a> for more information, or if you need support or scholarships, or have questions about accessibility. We will try to support your learning however we are able to. Details and registration here (button to eb page)</p>
 
           <br /><br />
         </div>
+      </section>
+      <section class="light" id="calendar">
+        <style>
+          iframe {
+            width: 80%;
+            margin-left: 10%;
+            height: 90vh;
+            aspect-ratio: 16/9;
+          }
+        </style>
+        <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FLos_Angeles&src=aGVsbG9AY2V0aS5pbnN0aXR1dGU&src=Y182NXJtMGJiOTRjZzZzZ2Rtb2QwZTNrdjRzNEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=Y19mNXFoaWE4ODMwMWlpNmMzcnVpcGxhdTNoZ0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=Y190dGJvYTF2Y2o1b2JkZmU3bm92M2xwbXZvNEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=Y19jcDZ2ZW1zMTEwNTI3ODltYjRvNm1sM2sxa0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23B39DDB&color=%230cb7b4&color=%23EF6C00&color=%230B8043&color=%23D81B60" frameborder="0" scrolling="no"></iframe>
+        <br /><br />
       </section>
     </main>
     <footer id="contact">
