--- a/community/index.html
+++ b/community/index.html
@@ -87,6 +87,9 @@
               <a href="/community/marin_vesely/index.html"><img src="/images/people/marin_vesely.jpg" alt="Marin Vesely" />Marin Vesely</a>
             </div>
             <div class="card">
+              <a href="/community/alison_heryer/index.html"><img src="/images/people/alison_heryer.png" alt="Alison Heryer" />Alison Heryer</a>
+            </div>
+            <div class="card">
               <a href="/community/hilary_tsai/index.html"><img src="/images/people/hilary_tsai.jpg" alt="Hilart Tsai" />Hilart Tsai</a>
             </div>
             <div class="card">
@@ -99,6 +102,9 @@
               <a href="/community/helen_leigh/index.html"><img src="/images/people/helen_leigh.png" alt="Helen Leigh" />Helen Leigh</a>
             </div>
             <div class="card"><img src="/images/people/skip_newberry.png" alt="Skip Newberry" />Skip Newberry</div>
+            <div class="card">
+              <a href="/community/mareika_glenn/index.html"><img src="/images/people/mareika_glenn.png" alt="Mareika Glenn" />Mareika Glenn</a>
+            </div>
             <div class="card">
               <a href="/community/justin_patrizi/index.html"><img src="/images/people/justin_patrizi.png" alt="Justin Patrizi" />Justin Patrizi</a>
             </div>
@@ -167,23 +173,6 @@
             </div>
             <div class="card">
               <a href="/community/jamie_sherman/index.html"><img src="/images/people/person-generic.png" alt="Jamie Sherman" />Jamie Sherman</a>
-            </div>
-          </article>
-          <article class="gallery sponsors">
-            <div class="card">
-              <a href="https://www.collinsfoundation.org/" target="_blank"><img src="/images/logos/logo_collinsfound.png" alt="Collins Foundation" /></a>
-            </div>
-            <div class="card">
-              <a href="https://www.portlandoregon.gov/oct/57448" target="_blank"><img src="/images/logos/logo_mthoodreg.png" alt="Mt. Hood Regulatory Commission" /></a>
-            </div>
-            <div class="card">
-              <a href="https://www.pgefoundation.org/" target="_blank"><img src="/images/logos/logo_pge_found.png" alt="PGE Foundation" /></a>
-            </div>
-            <div class="card">
-              <a href="https://www.pdx.edu/art-design/" target="_blank"><img src="/images/logos/logo_psu-sad.png" alt="Portland School of Art + Design" /></a>
-            </div>
-            <div class="card">
-              <a href="https://www.opensignalpdx.org/" target="_blank"><img src="/images/logos/logo_opensignal.png" alt="Open Signal" /></a>
             </div>
           </article>
         </div>
