--- a/learn/index.html
+++ b/learn/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>CETI Lab</title>
+    <title>CETI Worshops</title>
     <link rel="stylesheet" href="/libraries/modal-video/modal-video.min.css" />
     <link href="/libraries/lightbox/css/lightbox.min.css" rel="stylesheet" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
@@ -21,7 +21,7 @@
     <meta name="twitter:site" content="@ceti_institute" />
   </head>
 
-  <body id="techlab-page" class="subpage">
+  <body id="learn-page" class="subpage">
     <header class="branding">
       <h1 id="logo">
         <a href="/index.html"><img src="/images/logos/ceti-logo.svg" alt="CETI" /></a>
@@ -32,45 +32,30 @@
     <main>
       <section class="light">
         <figure style="max-height: 500px; overflow: hidden">
-          <img src="/images/heros/community-hero.png" alt="CETI Techlab" />
+          <img src="/images/heros/workshops_hero.png" alt="CETI Learn" />
         </figure>
 
         <div class="inner">
-          <h1>CETI Tech Lab</h1>
+          <h1>CETI Workshops</h1>
 
-          <p>The CETI Community Technology Lab at PSU is located at 1955 SW Broadway (<a href="https://www.pdx.edu/buildings/campus-building/fariborz-maseeh-hall" target="_blank">FMH</a>), Rm 218.</p>
-          <p>The lab provides access to cutting-edge technology, tools, support, and expertise to create, experiment, prototype, fabricate, innovate, and play with emerging technologies and media. The lab serves as an incubator and catalyst for participatory cross-disciplinary learning, teaching, mentoring, and creation, and for a critical engagement with technology and the role it plays in our ubiquitously connected world.</p>
-          <p>
-            More info about technology and equipment in the lab at <a href="mailto:techlab.ceti.institute?subject=techlab">techlab.ceti.institute</a></p>
-            <p>Find open lab hours and programs on the CETI calendar below.</p>
-
-            <br /><br />
-          </p>
+          <p>CETI workshops and institutes offer opportunities for lifelong learning, professional development, skill-building, and career transformation. Our approach is participatory, experiential, critical, creative, and interdisciplinary. We enthusiastically welcome a motivated professional community across sectors and disciplines, eager for cutting-edge impactful learning experiences in data and emerging technologies.</p>
+          <p>More details on our eventbrite page and on the CETI calendar.</p>
+          <p><a href="https://www.eventbrite.com/o/ceti-28009365641" target="_blank" class="button">CETI on EventBrite</a> &nbsp; <a href="../techlab/index.html#calendar" target="_blank" class="button">CETI Calendar</a></p>
+          <p>We foster collaborative experimentation, innovation, and real-time problem-solving and through these experiences, we hope to build a connected ecosystem of professionals who are collaborative and generous in their engagement - willing to learn with and from, and willing to share experiences, expertise, and imagination. Our workshops will be held in the <a href="/techlab">CETI lab</a> or in partner spaces and often streamed on the <a href="https://www.youtube.com/channel/UCNORXg1dJPQDrRy_slCEOMA" target="_blank">CETI YouTube channel</a>. Please reach out to <a href="mailto:hello@ceti.institute?subject=CETI Lab">hello@ceti.institute</a> for more information. We will try to support your learning however we are able to.</p>
+          <p>Details and registration here: <a href="https://www.eventbrite.com/o/ceti-28009365641" target="_blank" class="button">CETI on EventBrite</a></p>
+          <br /><br />
         </div>
-      </section>
-      <section class="light" id="calendar">
-
-        <iframe id="googlecal" src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23EF6C00&ctz=America%2FLos_Angeles&src=aGVsbG9AY2V0aS5pbnN0aXR1dGU&src=Y182NXJtMGJiOTRjZzZzZ2Rtb2QwZTNrdjRzNEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=Y19mNXFoaWE4ODMwMWlpNmMzcnVpcGxhdTNoZ0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=Y190dGJvYTF2Y2o1b2JkZmU3bm92M2xwbXZvNEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=Y19jcDZ2ZW1zMTEwNTI3ODltYjRvNm1sM2sxa0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%2399ADAD&color=%E5450A&color=%23EF6C00&color=%23EF6C00&color=%23EF6C00" frameborder="0" scrolling="no"></iframe>
-        <br /><br />
       </section>
     </main>
     <footer id="contact">
       <div></div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script>
-      function loadContent(url){
-        setTimeout(function(){ 
-          console.log('now')
-          $('#googlecal .mv-daynames-table').css('background','#999').css('color','#333');
-          $('#googlecal .ui-rtsr-unselected').css('background','#999').css('color','#333');
-          $('#googlecal .ui-rtsr-selected').css('background','#999').css('color','#333');
-      }, 2000);
-    }
-    loadContent();
-    </script>
+    <script src="/libraries/lightbox/js/lightbox-plus-jquery.min.js"></script>
     <script src="/js/nav.js"></script>
     <script src="/js/script.js"></script>
+    <script src="projects.js"></script>
+    <script src="participants.js"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-CSLJ4LHBM2"></script>
