fixed type on prototype1 page

--- a/gallery-of-the-future/prototype1.html
+++ b/gallery-of-the-future/prototype1.html
@@ -44,7 +44,7 @@
         <nav>
           <ul class="subnav">
 						<li><a href="/mozfest2021">MozFest2021</a></li>
-            <li><a href="/system-failure">First Exhibition</a></li>
+            <li><a href="system-failure/">First Exhibition</a></li>
             <li><a href="prototype1.html">Prototype 1</a></li>
             <li><a href="#participants">Participants</a></li>
           </ul>
