--- a/community/abby_chroman/index.html
+++ b/community/abby_chroman/index.html
@@ -28,7 +28,7 @@
     <main>
       <section>
         <div class="biohead">
-          <div class="biopic"><img src="/images/people/abby_chroman.jpg" alt="Abby Chroman" /></div>
+          <div class="biopic"><img src="/images/people/abby_chroman.png" alt="Abby Chroman" /></div>
         </div>
         <article class="inner">
           <h1>Abby Chroman</h1>
@@ -54,8 +54,8 @@
       function gtag() {
         dataLayer.push(arguments)
       }
-      gtag("js", new Date())
-      gtag("config", "G-CSLJ4LHBM2")
+      gtag('js', new Date())
+      gtag('config', 'G-CSLJ4LHBM2')
     </script>
   </body>
 </html>
