--- a/community/index.html
+++ b/community/index.html
@@ -97,9 +97,6 @@
               <a href="/community/rebecca_gibbons/index.html"><img src="/images/people/rebecca_gibbons.png" alt="Rebecca Gibbons" />Rebecca Gibbons</a>
             </div>
             <div class="card">
-              <a href="/community/laura_camila_medina/index.html"><img src="/images/people/laura_camila_medina.jpg" alt="Laura Camila Medina" />Laura Camila Medina</a>
-            </div>
-            <div class="card">
               <a href="/community/helen_leigh/index.html"><img src="/images/people/helen_leigh.png" alt="Helen Leigh" />Helen Leigh</a>
             </div>
             <div class="card"><img src="/images/people/skip_newberry.png" alt="Skip Newberry" />Skip Newberry</div>
@@ -126,9 +123,6 @@
               <a href="/community/steven_christian/index.html"><img src="/images/people/steven_christian.png" alt="Steven Christian" />Steven Christian</a>
             </div>
             <div class="card">
-              <a href="/community/lis_charman/index.html"><img src="/images/people/lis_charman.jpg" alt="Lis Charman" />Lis Charman</a>
-            </div>
-            <div class="card">
               <a href="/community/alanna_risse/index.html"><img src="/images/people/alanna_risse.jpg" alt="Alanna Risse" />Alanna Risse</a>
             </div>
             <div class="card">
@@ -152,13 +146,10 @@
               <a href="/community/barbara_beath/index.html"><img src="/images/people/barbara_beath.jpg" alt="Barbara Beath" />Barbara Beath</a>
             </div>
             <div class="card">
-              <a href="/community/anselm_hook/index.html"><img src="/images/people/anselm_hook.jpg" alt="Anselm Hook" />Anselm Hook</a>
-            </div>
-            <div class="card">
               <a href="/community/bennett_battaile/index.html"><img src="/images/people/bennett_battaile.jpg" alt="Bennett Battaile" />Bennett Battaile</a>
             </div>
             <div class="card">
-              <a href="/community/abby_chroman/index.html"><img src="/images/people/abby_chroman.jpg" alt="Abby Chroman" />Abby Chroman</a>
+              <a href="/community/abby_chroman/index.html"><img src="/images/people/abby_chroman.png" alt="Abby Chroman" />Abby Chroman</a>
             </div>
             <div class="card">
               <a href="/community/jesse_england/index.html"><img src="/images/people/jesse_england.jpeg" alt="Jesse England" />Jesse England</a>
