added new headshots and pages

--- a/community/antonio_jackson/index.html
+++ b/community/antonio_jackson/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CETI | Antonio Jackson | Community</title>
+    <title>CETI | Community</title>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600;700&family=Source+Sans+Pro:wght@400;700&display=swap" rel="preload" as="style" />
@@ -25,17 +25,22 @@
       <nav role="navigation" class="navtwo" id="topnavlist"></nav>
       <nav role="navigation" class="navmobile" id="mobilenavlist"></nav>
     </header>
+
     <main>
       <section>
         <div class="biohead">
-          <div class="biopic"><img src="/images/people/abby_chroman.png" alt="Abby Chroman" /></div>
+          <div class="biopic"><img src="/images/people/antonio_jackson.png" alt="Antonio Jackson" /></div>
         </div>
         <article class="inner">
           <h1>Antonio Jackson</h1>
-          <h2>Social Innovation Enthusiast</h2>
-          <p>Abby Chroman is a Program Manager for Social Innovation and Social Entrepreneurship at Portland State University (PSU) in The School of Business. Abby is also a mediator at XFORM and In-Accord, where she helps find new possibilities in conflict settings. She is a PSU Futures Fellow and a Re-Imagine PSU Fellow, and she chairs the Board of Advisors for The World Economic Forum's Global Shapers Hub in Portland.</p>
+          <p>A native of Portland, Oregon Antonio has had a lifelong passion for work with youth to inspire and encourage them to reach their full potential. He Co-Founded BB2S in 2013 after many years of being a mentor to hundreds of youth in the Portland Metropolitan area. Now as the Executive Director, he takes pride in being a positive example in the community by being involved in the lives so many. He received his Bachelor’s Degree from Portland State University in Business Administration in 2003. Shortly after graduation, he joined Daimler Trucks North America (formally Freightliner) in which he worked his way up through the Procurement Department starting off as an entry level buyer to managing over $100 million in component purchases annually as a Purchasing Agent. He worked on many Global Procurement teams and has worked in many different countries over his tenure there. In 2008, Antonio took on a Procurement role at Banfield Pet Hospital, a subsidiary of Mars Corporation. While at Banfield, Antonio developed cost savings programs, negotiated contracts, managed the vendor development processes, and lead supplier evaluations to ensure the Practice had uninterrupted supply of products for their then over 940 hospital locations.</p>
+
+          <p>Over the years, Antonio's passion for his community has lead him to sit on numerous boards: Inner-City Sports Ministries, Portland Housing Center, Broussard Foundation, Drive Nation, and the Oregon Robotics Tournament and Outreach Program (ORTOP). He has also been a youth football and basketball coach, high school football coach at Central Catholic, youth ministry leader at New Song Community Church, mentor with the Leisure Hour Jr. Golf Program, mentor with the Perspective Gents Club, and a STEAM Committee Community Partner for the 3toPhD program at Concordia University. Antonio is a husband and father of three children in addition to being a father figure to many other youth in the community.</p>
+
           <ul class="links-horiz">
-            <li><a href="https://www.linkedin.com/in/abbychroman/" target="_blank">linkedIn</a></li>
+            <li><a href="https://www.linkedin.com/company/building-blocks-2-success/" target="_blank">linkedIn</a></li>
+            <li><a href="http://www.bb2s.org" target="_blank">www.bb2s.org</a></li>
+            <li><a href="http://www.facebook.com/BB2S.org" target="_blank">facebook</a></li>
           </ul>
         </article>
       </section>
