--- a/community/ashlin_aronin/index.html
+++ b/community/ashlin_aronin/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CETI | Antonio Jackson | Community</title>
+    <title>CETI | Community</title>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600;700&family=Source+Sans+Pro:wght@400;700&display=swap" rel="preload" as="style" />
@@ -25,18 +25,17 @@
       <nav role="navigation" class="navtwo" id="topnavlist"></nav>
       <nav role="navigation" class="navmobile" id="mobilenavlist"></nav>
     </header>
+
     <main>
       <section>
         <div class="biohead">
-          <div class="biopic"><img src="/images/people/abby_chroman.png" alt="Abby Chroman" /></div>
+          <div class="biopic"><img src="/images/people/ashlin_aronin.png" alt="Ashlin Aronin" /></div>
         </div>
         <article class="inner">
-          <h1>Antonio Jackson</h1>
-          <h2>Social Innovation Enthusiast</h2>
-          <p>Abby Chroman is a Program Manager for Social Innovation and Social Entrepreneurship at Portland State University (PSU) in The School of Business. Abby is also a mediator at XFORM and In-Accord, where she helps find new possibilities in conflict settings. She is a PSU Futures Fellow and a Re-Imagine PSU Fellow, and she chairs the Board of Advisors for The World Economic Forum's Global Shapers Hub in Portland.</p>
-          <ul class="links-horiz">
-            <li><a href="https://www.linkedin.com/in/abbychroman/" target="_blank">linkedIn</a></li>
-          </ul>
+          <h1>Ashlin Aronin</h1>
+          <h2>Artist</h2>
+          <p>Ashlin Aronin is a Portland-based sound and software artist involved in virtual placemaking. Through a combination of the natural and synthetic, he explores affectivity under capitalism through a lens of ecology and the sacred. He creates interactive online experiences based around rituals that mimic and symbolize aspects of our daily lives. He also composes and performs music, using modular synthesizer and field recordings to construct evolving aural landscapes. Ashlin studied music and creative coding at Wesleyan University and Open Signal in Portland. He was an Instigator at NYU's ITP Camp creative technology unconference, and in residence at the Digital Naturalism Conference in Panama and Art Farm in Nebraska. Aronin has performed and shown work throughout the United States and on a variety of online platforms.</p>
+          <ul class="links-horiz"></ul>
         </article>
       </section>
     </main>
