--- a/community/brad_anderson/index.html
+++ b/community/brad_anderson/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CETI | Antonio Jackson | Community</title>
+    <title>CETI | Community</title>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600;700&family=Source+Sans+Pro:wght@400;700&display=swap" rel="preload" as="style" />
@@ -25,18 +25,17 @@
       <nav role="navigation" class="navtwo" id="topnavlist"></nav>
       <nav role="navigation" class="navmobile" id="mobilenavlist"></nav>
     </header>
+
     <main>
       <section>
         <div class="biohead">
-          <div class="biopic"><img src="/images/people/abby_chroman.png" alt="Abby Chroman" /></div>
+          <div class="biopic"><img src="/images/people/alanna_risse.jpg" alt="Brad Anderson" /></div>
         </div>
         <article class="inner">
-          <h1>Antonio Jackson</h1>
-          <h2>Social Innovation Enthusiast</h2>
-          <p>Abby Chroman is a Program Manager for Social Innovation and Social Entrepreneurship at Portland State University (PSU) in The School of Business. Abby is also a mediator at XFORM and In-Accord, where she helps find new possibilities in conflict settings. She is a PSU Futures Fellow and a Re-Imagine PSU Fellow, and she chairs the Board of Advisors for The World Economic Forum's Global Shapers Hub in Portland.</p>
-          <ul class="links-horiz">
-            <li><a href="https://www.linkedin.com/in/abbychroman/" target="_blank">linkedIn</a></li>
-          </ul>
+          <h1>Brad Anderson</h1>
+          <h2>Twchnologist</h2>
+          <p>Brad is a technologist and entrepreneur who lives and works in Portland Oregon. He has spent a lifetime building new things and taking old things apart. Professionally he has worked a variety or roles as a Software Engineer, Technology Executive and Startup Founder.</p>
+          <ul class="links-horiz"></ul>
         </article>
       </section>
     </main>
