--- a/community/index.html
+++ b/community/index.html
@@ -82,6 +82,9 @@
               <a href="/community/stephen_lee/index.html"><img src="/images/people/stephen_lee.jpg" alt="Stephen Lee" />Stephen Lee</a>
             </div>
             <div class="card">
+              <a href="/community/antonio_jackson/index.html"><img src="/images/people/antonio_jackson.png" alt="Antonio Jackson" />Antonio Jackson</a>
+            </div>
+            <div class="card">
               <a href="/community/marin_vesely/index.html"><img src="/images/people/marin_vesely.jpg" alt="Marin Vesely" />Marin Vesely</a>
             </div>
             <div class="card">
@@ -156,6 +159,9 @@
             </div>
             <div class="card">
               <a href="/community/vo_vo/index.html"><img src="/images/people/vo_vo.png" alt="Vo" />Vo</a>
+            </div>
+            <div class="card">
+              <a href="/community/ashlin_aronin/index.html"><img src="/images/people/ashlin_aronin.png" alt="Ashlin Aronin" />Ashlin Aronin</a>
             </div>
             <div class="card">
               <a href="/community/matthew_sottile/index.html"><img src="/images/people/matthew_sottile.jpg" alt="Matthew Sottile" />Matthew Sottile</a>
