added a dozen more people

--- a/community/alanna_risse/index.html
+++ b/community/alanna_risse/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CETI | Community</title>
+    <title>CETI | Community | Alanna Risse</title>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600;700&family=Source+Sans+Pro:wght@400;700&display=swap" rel="preload" as="style" />
@@ -59,8 +59,8 @@
       function gtag() {
         dataLayer.push(arguments)
       }
-      gtag("js", new Date())
-      gtag("config", "G-CSLJ4LHBM2")
+      gtag('js', new Date())
+      gtag('config', 'G-CSLJ4LHBM2')
     </script>
   </body>
 </html>
