--- a/community/index.html
+++ b/community/index.html
@@ -79,16 +79,37 @@
           <div class="inner"><h2>People/Affiliates</h2></div>
           <article class="gallery">
             <div class="card">
+              <a href="/community/solomon_weisbard/index.html"><img src="/images/people/solomon_weisbard.png" alt="Solomon Weisbard" />Solomon Weisbard</a>
+            </div>
+            <div class="card">
+              <a href="/community/sarah_turner/index.html"><img src="/images/people/sarah_turner.png" alt="Sarah Turner" />Sarah Turner</a>
+            </div>
+            <div class="card">
+              <a href="/community/sarah_read/index.html"><img src="/images/people/sarah_read.png" alt="Sarah Read" />Sarah Read</a>
+            </div>
+            <div class="card">
+              <a href="/community/olaoye_onipede/index.html"><img src="/images/people/olaoye_onipede.png" alt="Olaoye Onipede" />Olaoye Onipede</a>
+            </div>
+            <div class="card">
+              <a href="/community/chloe_zhang/index.html"><img src="/images/people/chloe_zhang.png" alt="Chloe Zhang" />Chloe Zhang</a>
+            </div>
+            <div class="card">
               <a href="/community/stephen_lee/index.html"><img src="/images/people/stephen_lee.jpg" alt="Stephen Lee" />Stephen Lee</a>
             </div>
             <div class="card">
               <a href="/community/antonio_jackson/index.html"><img src="/images/people/antonio_jackson.png" alt="Antonio Jackson" />Antonio Jackson</a>
             </div>
             <div class="card">
+              <a href="/community/ayse_gursoz/index.html"><img src="/images/people/ayse_gursoz.png" alt="Ayse Gursoz" />Ayşe Gürsöz</a>
+            </div>
+            <div class="card">
               <a href="/community/marin_vesely/index.html"><img src="/images/people/marin_vesely.jpg" alt="Marin Vesely" />Marin Vesely</a>
             </div>
             <div class="card">
               <a href="/community/alison_heryer/index.html"><img src="/images/people/alison_heryer.png" alt="Alison Heryer" />Alison Heryer</a>
+            </div>
+            <div class="card">
+              <a href="/community/alan_ma/index.html"><img src="/images/people/alan_ma.png" alt="Alan Ma" />Alan Ma</a>
             </div>
             <div class="card">
               <a href="/community/hilary_tsai/index.html"><img src="/images/people/hilary_tsai.jpg" alt="Hilart Tsai" />Hilart Tsai</a>
@@ -102,6 +123,9 @@
             <div class="card">
               <a href="/community/helen_leigh/index.html"><img src="/images/people/helen_leigh.png" alt="Helen Leigh" />Helen Leigh</a>
             </div>
+            <div class="card">
+              <a href="/community/amy_meyer/index.html"><img src="/images/people/amy_meyer.png" alt="Amy Meyer" />Amy Meyer</a>
+            </div>
             <div class="card"><img src="/images/people/skip_newberry.png" alt="Skip Newberry" />Skip Newberry</div>
             <div class="card">
               <a href="/community/mareika_glenn/index.html"><img src="/images/people/mareika_glenn.png" alt="Mareika Glenn" />Mareika Glenn</a>
@@ -112,7 +136,9 @@
             <div class="card">
               <a href="/community/francesca_frattaroli/index.html"><img src="/images/people/francesca_frattaroli.png" alt="Francesca Frattaroli" />Francesca Frattaroli</a>
             </div>
-
+            <div class="card">
+              <a href="/community/annie_tonsiengsom/index.html"><img src="/images/people/annie_tonsiengsom.png" alt="Annie Tongsiengsom" />Annie Tongsiengsom</a>
+            </div>
             <div class="card">
               <a href="/community/zack_marlow/index.html"><img src="/images/people/zack_marlow.png" alt="Zack Marlow" />Zack Marlow</a>
             </div>
