typo on sarah read

--- a/community/alanna_risse/index.html
+++ b/community/alanna_risse/index.html
@@ -33,7 +33,7 @@
         </div>
         <article class="inner">
           <h1>Alanna Risse</h1>
-          <h2>Director of Communication Technologies</h2>
+          <h2>Artist</h2>
           <p>Alanna Risse is an instructor, creative technologist, and artist. She builds large, immersive installations inspired by adventure, danger, and humor. She received her MFA in Visual Studies from Pacific Northwest College of Art in 2015 and her BFA in Painting/Drawing from California College of Art in 2008. She teaches interactive Media classes at PSU.</p>
           <p>In 2019, Risse helped Portland Public Schools with their CS for all initiative as a member of the PPS Computer Science Steering Committee. She's served at Franklin High School as a Computer Science Department Advisory Board Member, and has been a guest speaker at code.org and PDX Serverless public events.</p>
           <ul class="links-horiz">
