--- a/community/sarah_read/index.html
+++ b/community/sarah_read/index.html
@@ -29,7 +29,7 @@
     <main>
       <section>
         <div class="biohead">
-          <div class="biopic"><img src="/images/people/alanna_risse.jpg" alt="Alanna Risse" /></div>
+          <div class="biopic"><img src="/images/people/sarah_read.png" alt="Sarah Read" /></div>
         </div>
         <article class="inner">
           <h1>Sarah Read</h1>
