added michelle guthrie to community page

--- a/community/index.html
+++ b/community/index.html
@@ -79,6 +79,9 @@
           <div class="inner"><h2>People/Affiliates</h2></div>
           <article class="gallery">
             <div class="card">
+              <a href="/community/michelle_guthrie/index.html"><img src="/images/people/michelle_guthrie.png" alt="Michelle Guthrie" />Michelle Guthrie</a>
+            </div>
+            <div class="card">
               <a href="/community/solomon_weisbard/index.html"><img src="/images/people/solomon_weisbard.png" alt="Solomon Weisbard" />Solomon Weisbard</a>
             </div>
             <div class="card">
@@ -90,6 +93,7 @@
             <div class="card">
               <a href="/community/olaoye_onipede/index.html"><img src="/images/people/olaoye_onipede.png" alt="Olaoye Onipede" />Olaoye Onipede</a>
             </div>
+
             <div class="card">
               <a href="/community/chloe_zhang/index.html"><img src="/images/people/chloe_zhang.png" alt="Chloe Zhang" />Chloe Zhang</a>
             </div>
