removed some mira links

--- a/community/shankar_narayan/index.html
+++ b/community/shankar_narayan/index.html
@@ -33,7 +33,7 @@
         <article class="inner">
           <h1>Shankar Narayan</h1>
           <h2>Board Member</h2>
-          <p>Shankar Narayan is an advocate, attorney, and changemaker for fair, accountable, and community-centric technology and a co-founder and Principal at MIRA!. Shankar was previously Technology and Liberty Project Director at the ACLU of Washington. There, he founded the groundbreaking Tech Fairness Coalition, which helped pass landmark technology laws and campaigned for vendors to build tech in ethical and community-centric ways. For this work, Shankar received the 2018 Roberto Maestas Legacy Award from El Centro de la Raza. Previously, Shankar was Legislative Director at ACLU-WA, where he led efforts to pass legislation to achieve marriage equality, restore voting rights, enforce non-discrimination laws, improve police accountability, defeat gang legislation, and protect privacy, among others. Shankar has also been Policy Director at OneAmerica and a technology lawyer at K & L Gates. He teaches law, technology, and ethics at Seattle University School of Law. Shankar holds a B.S. from Bates College, a J.D. from Yale Law School, and an M.P.P. from Harvard's Kennedy School of Government. An immigrant, Shankar grew up in the Soviet Union, U.S., Maldives, India, Yugoslavia, Thailand, and Russia. A poet, he is a four-time Pushcart Prize nominee and a recipient of awards and fellowships from Kundiman, Hugo House, Flyway, Paper Nautilus, Jack Straw, and 4Culture.</p>
+          <p>Shankar Narayan is an advocate, attorney, and changemaker for fair, accountable, and community-centric technology. Shankar was previously Technology and Liberty Project Director at the ACLU of Washington. There, he founded the groundbreaking Tech Fairness Coalition, which helped pass landmark technology laws and campaigned for vendors to build tech in ethical and community-centric ways. For this work, Shankar received the 2018 Roberto Maestas Legacy Award from El Centro de la Raza. Previously, Shankar was Legislative Director at ACLU-WA, where he led efforts to pass legislation to achieve marriage equality, restore voting rights, enforce non-discrimination laws, improve police accountability, defeat gang legislation, and protect privacy, among others. Shankar has also been Policy Director at OneAmerica and a technology lawyer at K & L Gates. He teaches law, technology, and ethics at Seattle University School of Law. Shankar holds a B.S. from Bates College, a J.D. from Yale Law School, and an M.P.P. from Harvard's Kennedy School of Government. An immigrant, Shankar grew up in the Soviet Union, U.S., Maldives, India, Yugoslavia, Thailand, and Russia. A poet, he is a four-time Pushcart Prize nominee and a recipient of awards and fellowships from Kundiman, Hugo House, Flyway, Paper Nautilus, Jack Straw, and 4Culture.</p>
           <!-- <ul class="links-horiz">
             <li><a href="#">link</a></li>
             <li><a href="#">link</a></li>
@@ -57,8 +57,8 @@
       function gtag() {
         dataLayer.push(arguments)
       }
-      gtag("js", new Date())
-      gtag("config", "G-CSLJ4LHBM2")
+      gtag('js', new Date())
+      gtag('config', 'G-CSLJ4LHBM2')
     </script>
   </body>
 </html>
