--- a/newsletter/index.html
+++ b/newsletter/index.html
@@ -59,6 +59,19 @@
                 <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button" /></div>
               </div>
             </form>
+            <p>
+              Copyright © 2022 CETI, All rights reserved.<br />
+              *|IFNOT:ARCHIVE_PAGE|* *|LIST:DESCRIPTION|*
+            </p>
+
+            <p>
+              Our mailing address is:<br />
+              2510 NE Knott Street, Portland OR 97212 *|END:IF|*
+            </p>
+
+            <p>Want to change how you receive these emails? You can update your preferences or unsubscribe from this list.</p>
+
+            <p>*|IF:REWARDS|* *|HTML:REWARDS|* *|END:IF|*</p>
           </div>
           <!--End mc_embed_signup-->
         </div>
@@ -78,12 +91,12 @@
       ;(function ($) {
         window.fnames = new Array()
         window.ftypes = new Array()
-        fnames[0] = "EMAIL"
-        ftypes[0] = "email"
-        fnames[1] = "FNAME"
-        ftypes[1] = "text"
-        fnames[2] = "LNAME"
-        ftypes[2] = "text"
+        fnames[0] = 'EMAIL'
+        ftypes[0] = 'email'
+        fnames[1] = 'FNAME'
+        ftypes[1] = 'text'
+        fnames[2] = 'LNAME'
+        ftypes[2] = 'text'
       })(jQuery)
       var $mcj = jQuery.noConflict(true)
     </script>
@@ -94,8 +107,8 @@
       function gtag() {
         dataLayer.push(arguments)
       }
-      gtag("js", new Date())
-      gtag("config", "G-CSLJ4LHBM2")
+      gtag('js', new Date())
+      gtag('config', 'G-CSLJ4LHBM2')
     </script>
   </body>
 </html>
