--- a/programs/index.html
+++ b/programs/index.html
@@ -82,10 +82,6 @@
           <h3><a href="/programs/constellations">Constellations</a></h3>
         </article>
       </section>
-      <section>
-        <a href="https://mirathefuture.org" target="_blank"><img src="/images/heros/mira-hero.png" /></a>
-        <div class="inner"></div>
-      </section>
     </main>
     <footer id="contact">
       <div></div>
@@ -101,8 +97,8 @@
       function gtag() {
         dataLayer.push(arguments)
       }
-      gtag("js", new Date())
-      gtag("config", "G-CSLJ4LHBM2")
+      gtag('js', new Date())
+      gtag('config', 'G-CSLJ4LHBM2')
     </script>
   </body>
 </html>
