styled footed on enchanted pages

--- a/programs/enchanted-tech-22/index.html
+++ b/programs/enchanted-tech-22/index.html
@@ -31,10 +31,16 @@
         <figure><img src="/images/heros/enchanted-tech-22-place.png" alt="Enchanted Tech Summer Workshop" /></figure>
         <div class="header-hero-text">
           <h1>Enchanted Tech 2022</h1>
-          <h2>E-Textiles Festival</h2>
+          <h2>Summer Festival</h2>
         </div>
         <div class="inner">
-          <p>Join our Summer Festival of learning and creative experiments focused on wearables, costumes, masks, avatars and cosplay using creative technology, electronics, craft, sewing, music, and art. Our accessible, diy approach to tech is personal, and community-driven, combining the imagination, everyday materials, craft techniques, and cutting-edge technologies.</p>
+          <h2>
+            Enchanted Technologies Summer Festival 2022<br />
+            July 7 — Aug 19, 2022
+          </h2>
+
+          <p>Join us for six weeks of collaborative learning, play, and creative experiments using cutting edge technologies (xr, creative code, smart tech), art and music to craft delightful and imaginative interactive objects, stories, spaces, and experiences placed around the city.</p>
+          <h3>More to come! Check back soon.</h3>
         </div>
       </section>
       <!-- <section>
