added link to archive page

--- a/programs/enchanted-tech-22/index.html
+++ b/programs/enchanted-tech-22/index.html
@@ -41,6 +41,9 @@
 
           <p>Join us for six weeks of collaborative learning, play, and creative experiments using cutting edge technologies (xr, creative code, smart tech), art and music to craft delightful and imaginative interactive objects, stories, spaces, and experiences placed around the city.</p>
           <h3>More to come! Check back soon.</h3>
+
+          <p>Learn more about our E-Textiles festival from summer 2021:</p>
+          <p><a href="/programs/enchanted-tech/" class="button">E-Textiles Fest 2021</a></p>
         </div>
       </section>
       <!-- <section>
