added reg form for enchanted tech

--- a/programs/enchanted-tech-22/index.html
+++ b/programs/enchanted-tech-22/index.html
@@ -40,6 +40,8 @@
           </h2>
 
           <p>Join us for six weeks of collaborative learning, play, and creative experiments using cutting edge technologies (xr, creative code, smart tech), art and music to craft delightful and imaginative interactive objects, stories, spaces, and experiences placed around the city.</p>
+          <p>Register now to receive updates.</p>
+          <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfU4X3jw2rNHJJJiGF9NFlQq1MdEwkpBLFMQ6LywOORscffAg/viewform?vc=0&c=0&w=1&flr=0" target="_blank" class="button">Enchanted Tech Registration</a></p>
           <h3>More to come! Check back soon.</h3>
 
           <p>Learn more about our E-Textiles festival from summer 2021:</p>
